# tiptop_ipy

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: instrument-status.yml
OLD_FILES/: tiptop_email.py
docs/: api.rst  changelog.rst  conf.py  index.rst  installation.rst  instruments.rst  quickstart.rst  requirements.txt  user_guide.rst
status/: instrument_status.json
status/badges/: ANDES.json  ERIS.json  ERIS_LGS.json  HARMONI_SCAO.json  HarmoniLTAO_1.json  HarmoniLTAO_2.json  HarmoniLTAO_3.json  MAVIS.json  METIS.json  MICADO_SCAO.json  MICADO_SCAO_less_layers.json  MORFEO.json  MUSE_LTAO.json  SPHERE.json  eris_lgs.json  mavis.json  sphere.json
tiptop_ipy/: Pipfile  __init__.py  check_ini_updates.py  config.py  defaults.yaml  ini_parser.py  result.py  tiptop.py  tiptop_connection.py  tiptop_email.py  utils.py  validatedconfig.py  validation.py  version.py
tiptop_ipy/ci/: check_server_status.py
tiptop_ipy/ci/status/: instrument_status.json
tiptop_ipy/ci/status/badges/: HarmoniLTAO_2.json  MICADO_SCAO_less_layers.json  MORFEO.json  SOUL.json  eris.json
tiptop_ipy/instrument_templates/: ANDES.ini  HARMONI_SCAO.ini  HarmoniLTAO_1.ini  HarmoniLTAO_2.ini  HarmoniLTAO_3.ini  HarmoniSCAO_1.ini  METIS.ini  MICADO_SCAO.ini  MICADO_SCAO_less_layers.ini  MORFEO.ini  eris.ini  eris_lgs.ini  eris_orig.ini  mavis.ini  micado_scao.ini  serviceDescription.json  sphere.ini
tiptop_ipy/tests/: conftest.py  test_all_instruments.py  test_ini_parser.py  test_result.py  test_tiptop.py  test_utils.py  test_validation.py
